Remove engines limitation

--- a/package.json
+++ b/package.json
@@ -43,8 +43,5 @@
     "cli-color": "1.1.x",
     "object-extender": "1.2.x"
   },
-  "license": "MIT",
-  "engines": {
-    "node": "5.x"
-  }
+  "license": "MIT"
 }
